Revert "Prevent horizontal scrolling on right. Tested on chrome & safari. Need to test on mobile"
This reverts commit a634194ad05d5c9cb15710f9db0820e9294ff974.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -11,7 +11,6 @@
 
 	body {
 		background: #fff;
-		overflow-x: hidden;
 	}
 
 		body.is-loading * {
